# mini-yolov5-cpp

./: .gitignore  CMakeLists.txt  README.en.md  README.md  build.ps1
scratch/: CMakeLists.txt  README.en.md  README.md  autograd.cpp  autograd.h  main.cpp  net.cpp  net.h  stb_impl.cpp
scratch_py/: README.en.md  README.md  autograd.py  main.py  net.py
src/: detect.cpp  engine.h  export.cpp  gen_data.cpp  main.cpp  train.cpp  utils.cpp  utils.h
src/loss/: loss.cpp  loss.h
src/model/: modules.h  yolov5.cpp  yolov5.h
tools/: convert_ultralytics.py  export_onnx.py  prep_coco_pb.py
